--- a/config/boards/shields/corny/corny_right.conf
+++ b/config/boards/shields/corny/corny_right.conf
@@ -1,7 +1,10 @@
 CONFIG_NFCT_PINS_AS_GPIOS=y
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_PM_SOFT_OFF=y
+
+# Nice!View
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
