--- a/config/boards/shields/corny/corny_right.conf
+++ b/config/boards/shields/corny/corny_right.conf
@@ -6,5 +6,12 @@ CONFIG_ZMK_PM_SOFT_OFF=y
 # Nice!View
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+#CONFIG_LVGL_USE_THEME_MONO=y
+#CONFIG_LVGL_COLOR_TRANSP_CUSTOM=y
+#CONFIG_LVGL_CUSTOM_COLOR_TRANSP_RED=0x00
+#CONFIG_LVGL_CUSTOM_COLOR_TRANSP_GREEN=0x00
+#CONFIG_LVGL_CUSTOM_COLOR_TRANSP_BLUE=0x00
+#CONFIG_LVGL_THEME_DEFAULT_FONT_SMALL_MONTSERRAT_16=y
+#CONFIG_LVGL_THEME_DEFAULT_FONT_NORMAL_MONTSERRAT_26=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
