--- a/config/boards/shields/corny/corny_left.conf
+++ b/config/boards/shields/corny/corny_left.conf
@@ -2,6 +2,8 @@ CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_PM_SOFT_OFF=y
+# Better bluetooth connectivity
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # Nice!View
 CONFIG_ZMK_DISPLAY=y
