--- a/config/boards/shields/corny/corny_right.conf
+++ b/config/boards/shields/corny/corny_right.conf
@@ -3,6 +3,9 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_PM_SOFT_OFF=y
 
+# Better bluetooth connectivity
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
 # Nice!View
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
